gcc/testsuite/rust/rustc/ui/parser/issue-14303-impl.rs
struct X<T>(T);

impl<'a, T, 'b> X<T> {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

